--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -2,79 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from torch import nn\n",
-    "from torch.nn import functional as f"
+    "from preprocess_data import *\n",
+    "from config import config_base\n",
+    "config = config_base.config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = organize_data(config.train_data)\n",
+    "df = df.sample(5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = torch.tensor(3)\n",
-    "a = nn.Parameter(a)"
+    "df = deal_data(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 10])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /tmp/jieba.cache\n",
+      "Loading model cost 0.418 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
     }
    ],
    "source": [
-    "a = torch.Tensor([[ 0.0000,  0.2849,  0.3237,   -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),    -float('inf'),\n",
-    "           -float('inf')]])\n",
-    "a.size()"
+    "df = shorten_content_all(df, config.max_len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.2694,  0.3582,  0.3724,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "          0.0000,  0.0000,  0.0000]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f.softmax(a, dim=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "if a:\n",
-    "    print(3)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
