--- a/test.ipynb
+++ b/test.ipynb
@@ -2,120 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from pyhanlp import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a = '你好，欢迎在Python中调用HanLP的API，美国国会要杀了他 你信吗？'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "你好/vl\n",
-      "，/w\n",
-      "欢迎/v\n",
-      "在/p\n",
-      "Python/nx\n",
-      "中/f\n",
-      "调用/v\n",
-      "HanLP/nx\n",
-      "的/ude1\n",
-      "API/nx\n",
-      "，/w\n",
-      "美国/nsf\n",
-      "国会/nis\n",
-      "要/v\n",
-      "杀/v\n",
-      "了/ule\n",
-      "他/rr\n",
-      " /w\n",
-      "你/rr\n",
-      "信/n\n",
-      "吗/y\n",
-      "？/w\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in HanLP.segment(a):\n",
-    "    print(i)"
+    "from stanfordcorenlp import StanfordCoreNLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "Config = JClass(\"com.hankcs.hanlp.HanLP$Config\")"
+    "s = '12月16日电'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Config.ShowTermNature = False"
+    "nlp = StanfordCoreNLP('/home/xy/stanford-corenlp-full-2018-02-27/', lang='zh')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "CRFSegment = JClass(\"com.hankcs.hanlp.seg.CRF.CRFSegment\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "java.lang.IllegalArgumentExceptionPyRaisable",
-     "evalue": "java.lang.IllegalArgumentException: CRF分词模型加载 /home/xy/anaconda3/lib/python3.6/site-packages/pyhanlp/static/data/model/segment/CRFSegmentModel.txt 失败，耗时 4 ms",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mjava.lang.IllegalArgumentExceptionPyRaisable\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-6a7befb7bd08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msegment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCRFSegment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menableCustomDictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/jpype/_jclass.py\u001b[0m in \u001b[0;36m_javaInit\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m         self.__javaobject__ = self.__class__.__javaclass__.newClassInstance(\n\u001b[0;32m--> 111\u001b[0;31m             *args)\n\u001b[0m\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mjava.lang.IllegalArgumentExceptionPyRaisable\u001b[0m: java.lang.IllegalArgumentException: CRF分词模型加载 /home/xy/anaconda3/lib/python3.6/site-packages/pyhanlp/static/data/model/segment/CRFSegmentModel.txt 失败，耗时 4 ms"
-     ]
+     "data": {
+      "text/plain": [
+       "['12月', '16日', '电']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "segment = CRFSegment().enableCustomDictionary(True)"
+    "nlp.word_tokenize(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
